# mitos

./: .gitignore  .mcp.json  AGENT.md  Cargo.toml  LICENSE  about.md  deny.toml
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/: settings.local.json
.kiro/specs/git-worktree-mvp/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/mitos-mvp/: design.md  requirements.md  spec.json  tasks.md
.serena/: project.yml
src/: error.rs  main.rs
src/git/: mod.rs  worktree.rs
