[package]
name = "mitos"
version = "0.1.0"
edition = "2024"

[dependencies]
auto-allocator = "0.1.0"
crossterm = "0.29.0"
git2 = "0.20.2"
portable-pty = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
which = "8.0.0"

[dev-dependencies]
assert_matches = "1.5.0"
cargo-husky = "1"
mockall = "0.13.1"
proptest = "1.7.0"
rstest = "0.26.1"
tempfile = "3.21.0"
